# bitonic_sort

./: AUTHORS  COPYING  ChangeLog  Makefile.in  README  config.h  config.h.in  config.status  configure  configure.in
include/: Makefile  Makefile.am  Makefile.in  bitonic_sort.h  err_utils.h
src/: Makefile  Makefile.am  Makefile.in  bitonic_sort.c  err_utils.c  main.c
